meg mielott elbasznam